--- a/nikhila/app.css
+++ b/nikhila/app.css
@@ -1,4 +1,6 @@
 html,body{
+  margin:0px;
+  padding: 0px;
 
   height:100%;
 }
@@ -7,8 +9,9 @@ img {
     max-width: 100%;
 }
 
-#nav-main{
+#navpill{
   height:auto;
+  color:rgb(214, 54, 233);
 
 }
 
@@ -39,16 +42,16 @@ img {
   padding-right: 20px;
 
 }
-#cover{
+.cover{
   background: #222 url('img/audi.png')center center no-repeat;
   background-size:cover;
   color:black;
-  height:100%;
+  height:800px;
   text-align: center;
   display :flex;
   align-items: center;
   opacity: 10%;
-  padding-right: 50px;
+
 }
 #cover-caption{
   width:100%;
@@ -60,7 +63,9 @@ img {
   background-color:rgb(231, 186, 127);
   text-align:center;
   color:white;
-
+  height: auto;
+  background-color: rgb(62, 59, 55);
+  opacity : 10%;
 }
 
 #niki{
@@ -94,7 +99,7 @@ img {
 
 
 #ammu{
-  height: 600px;
+  height: 800px;
   background: #222 url(img/bg3.png) center center no-repeat ;
 
 }
@@ -115,7 +120,7 @@ img {
 }
 
 #ammu1{
-  height: 600px;
+  height: 800px;
   background: #222 url(img/pizza.png) center center no-repeat ;
 
 }
@@ -137,4 +142,18 @@ img {
 #carousel_1{
 
   width:100%;
+}
+::-webkit-scrollbar{
+  width: 8px;
+  background-color: rgb(27, 29, 25);
+}
+::-webkit-scrollbar-thumb{
+  border-radius: 10px;
+  background-color: rgb(219, 81, 231);
+}
+#footer-main {
+    background: #222;
+    color: white;
+    font-size: 0.8rem;
+    padding: 2.5rem 0;
 }
